style.css
/* ... */
@media only screen and (max-width: 1024px) {
  .wrapper h1,
  .wrapper h2,
  .wrapper h3,
  .wrapper h4,
  .wrapper h5,
  .wrapper h6,
  .entry,
  .entry .wp-caption,
  .entry .wp-caption img,
  .entry img,
  .content-index,
  .content-about,
  .content-parent,
  .content-about-content,
  .content-about-image,
  .post-meta,
  .entry p,
  .entry .aligncenter,
  .tag-links,
  .comments,
  .pagination-nav,
  .solofolio-gallery-title p,
  .page-template-story-php .wrapper p,
  .page-template-story-php .wrapper img,
  .page-template-story-php .wrapper .wp-caption,
  .vert-scroll img,
  .vert-scroll .wp-caption-text,
  .solofolio-cyclereact-slide .wp-caption-text,
  .solofolio-cyclereact-slide img {
    margin-left: auto;
    margin-right: auto;
  }
  .wp-caption img, img.alignnone {
    width: 100%;
    height: auto;
  }
  .header {
    position: relative;
    line-height: 1.3;
    margin-bottom: 1rem;
    min-width: 320px;
  }
  .header .logo { margin-bottom: 1rem; padding-top: 1rem; }
  .page-template-story-php .header { margin-bottom: 0 }
  .header-meta { max-width: inherit }
  .header-content { display: none }
  .header-content ul li a, .header-content h3 {
    display: block;
    line-height: 1.5rem;
    font-size: 16px;
    padding: .75rem 1rem;
    text-align: left;
  }
  .site-title { line-height: 1 }
  .sidebar-widget, .solofolio-custom-menu { margin-top: 0 }
  .header-meta div {
    float: none;
  }
  .wrapper {
    margin-top: 0;
    min-width: 320px;
    padding-left: 1rem;
    padding-right: 1rem;
  }
  .header-content h3,
  .menu-icon,
  .header-content ul li,
  .searchform,
  .solofolio-social {
    border-top: 1px solid rgba(0,0,0,0.1);
  }
  .solofolio-social a {
    display: inline-block;
    line-height: 1.5rem;
    padding: .75rem 1.25rem;
  }
  .menu-icon {
    display: block;
    margin-top: 1rem;
    padding: .75rem 1rem;
    cursor: pointer;
    text-align: left;
  }
  .menu-icon i {
    vertical-align: middle;
    float: right;
    line-height: inherit;
  }
  .solofolio-custom-menu h3:after { float: right }
  .searchform {
    display: table;
    width: 100%;
    padding: .5rem 1rem;
  }
  .searchform input, .searchform span {
    display: table-cell;
  }
  .searchform input {
    border: none;
    padding: 0;
    width: 100%;
  }
  .searchform span {
    width: 1px;
  }
  .searchform button {
    border: none;
    padding-right: 0;
    text-align: right;
  }
  .content-page,
  .content-index,
  .content-search,
  .content-about {
    max-width: 900px;
  }
  .content-about-image,
  .content-about-content {
    float: none;
    width: 100%;
  }
  .content-about-image {
    padding: 0;
    text-align: center;
    margin-bottom: 1rem;
  }
  .content-about-content {
    max-width: 600px;
    display: block;
  }
  .content-about .children { padding-left: 1rem }
  .content-about .children li {
    padding-left: 0;
    padding-right: 1rem;
  }
  .entry { margin-bottom: 2rem }
  .post-meta, .entry p {
    max-width: 600px;
  }
  .entry .wp-caption-text {
    margin: .25em auto auto auto;
    max-width: none;
  }
  .entry p { text-align: left }
  .comments .commentlist li { padding: 0 }
  .footer {
    line-height: 1.4;
    padding: 1rem;
  }
  .footer .copyright-label { display: none }
  .wrapper .content-index { width: 100% }
  .pagination-nav h4 { padding: 0 }
  .wrapper h1 { font-size: 22px }
  .vert-scroll .wp-caption-text { max-width: none }
  .solofolio-gallery-title h2 { text-align: center }
  .solofolio-cyclereact-slide img {
    max-width: 100%;
    width: auto;
    height: auto;
    display: block;
  }
  .solofolio-cyclereact-slide {
    visibility: visible !important;
    position: relative !important;
    margin: 1rem auto 0;
  }
  .solofolio-cyclereact-stage[style] { display: block !important }
  .solofolio-cyclereact-sidebar[style],
  .solofolio-cyclereact-thumbs[style] { display: none !important }
  .solofolio-cyclereact-sidebar, .solofolio-cyclereact-image-nav {
    display: none;
  }
  body .wrapper .solofolio-cyclereact-title {
    left: auto !important;
  }
  .vert-scroll-full {
    margin: 0 -1rem;
  }
  .header, .footer { text-align: center }
  .header-meta div { padding: 0 1rem }
}

@media only screen and (max-width: 620px) {
  [class*='col-'] {
    float: none;
    padding-right: 0;
    width: 100%;
  }
  body.page { overflow: auto }
  .header-content { text-align: center }
  .content-page,
  .content-index,
  .content-search,
  .content-parent .content { padding: 0 }
  .content-parent .children li {
    padding-right: 0;
    padding-left: 0;
    width: 49%;
  }
  .content-parent .children li:nth-child(odd) { padding-right: .5rem; }
  .content-parent .children li:nth-child(even) { padding-left: .5rem; }
  .single-post .pagination-nav .right, .single-post .pagination-nav .left { float: none }
  .single-post .pagination-nav .left { margin-bottom: 1rem }
  .single-post .pagination-nav .right h4 { text-align: left }
  .entry img { max-width: 100% }
}
/* ... */

